# pytest-texts-score-example

./: .gitignore  README.md  pyproject.toml  pytest.ini.example
src/pytest_texts_score_example/: main.py
tests/: test_mock_testing.py
